[project]
name = "configue"
description = "Helpers to load your application configuration from YAML files"
authors = [{ name = "Illuin Technology", email = "contact@illuin.tech" }]
maintainers = [{ name = "Illuin Technology", email = "contact@illuin.tech" }]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
version = "0.0.0"
dependencies = [
    "pyyaml>=5.1.0,<7.0.0"
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "build==1.2.1",
    "mypy==1.10.1",
    "pylint==3.2.5",
    "pytest==8.3.1",
    "pytest-cov==5.0.0",
    "setuptools==71.0.3",
    "twine==5.1.1",
    "wheel==0.43.0",
]

[project.urls]
"Homepage" = "https://github.com/illuin-tech/configue"
"Bug Reports" = "https://github.com/illuin-tech/configue/issues"
"Source" = "https://github.com/illuin-tech/configue/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
platforms = ["any"]
packages.find.include = ["configue", "configue.*"]
package-data.configue = ["py.typed"]

[tool.coverage]
run.source = ["configue"]
run.branch = true
report.exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
exclude = [
    "env",
]
strict = true
implicit_reexport = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
